# aws-robomaker-small-warehouse-world

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
env-hooks/: aws_robomaker_small_warehouse_world.dsv.in
launch/: no_roof_small_warehouse.launch  no_roof_small_warehouse.launch.py  no_roof_small_warehouse_launch.py  small_warehouse.launch  small_warehouse.launch.py  small_warehouse_launch.py  view_small_warehouse.launch
maps/002/: map.pgm  map.yaml
maps/005/: map.pgm  map.yaml  map_rotated.pgm
models/aws_robomaker_warehouse_Bucket_01/: model.sdf
models/aws_robomaker_warehouse_ClutteringA_01/: model.sdf
models/aws_robomaker_warehouse_ClutteringC_01/: model.sdf
models/aws_robomaker_warehouse_ClutteringD_01/: model.sdf
models/aws_robomaker_warehouse_DeskC_01/: model.sdf
models/aws_robomaker_warehouse_GroundB_01/: model.sdf
models/aws_robomaker_warehouse_GroundB_01/meshes/: aws_robomaker_warehouse_GroundB_01_visual.DAE
models/aws_robomaker_warehouse_Lamp_01/: model.sdf
models/aws_robomaker_warehouse_Lamp_01/meshes/: aws_robomaker_warehouse_Lamp_01_visual.DAE
models/aws_robomaker_warehouse_RoofB_01/: model.sdf
models/aws_robomaker_warehouse_RoofB_01/meshes/: aws_robomaker_warehouse_RoofB_01_visual.DAE
models/aws_robomaker_warehouse_ShelfD_01/: model.sdf
models/aws_robomaker_warehouse_ShelfE_01/: model.sdf
models/aws_robomaker_warehouse_ShelfF_01/: model.sdf
models/aws_robomaker_warehouse_ShelfF_01/meshes/: aws_robomaker_warehouse_ShelfF_01_visual.DAE
models/aws_robomaker_warehouse_TrashCanC_01/: model.sdf
models/aws_robomaker_warehouse_TrashCanC_01/meshes/: aws_robomaker_warehouse_TrashCanC_01_visual.DAE
models/aws_robomaker_warehouse_WallB_01/: model.sdf
models/aws_robomaker_warehouse_WallB_01/meshes/: aws_robomaker_warehouse_WallB_01_visual.DAE
rviz/: basic_data.rviz
worlds/: no_roof_small_warehouse.world
worlds/no_roof_small_warehouse/: no_roof_small_warehouse.world
worlds/small_warehouse/: small_warehouse.world
